Add C6 overview video

--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/0-overview.mdx
@@ -4,10 +4,10 @@ title: "Overview"
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="WRkobQcz9ik" params="fs=1&modestbranding=1&rel=0"/>
+  <YouTube id="GuAvEYd3_xY" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-In Chapter 2.2, we saw how to organise our code into functions and procedures. This has allowed us to start building larger programs. However, we haven't yet seen the tools we can use to organise data.
+In [Structuring Code](/book/part-2-organised-code/1-structuring-code/0-overview.mdx), we saw how to organise our code into functions and procedures. This has allowed us to start building larger programs. However, we haven't yet seen the tools we can use to organise data.
 
 Data is a key enabler in helping us build and communicate the things within our digital realities. By organising our data, we can start to capture the things that exist within our code far more clearly than we have with just primitive data line numbers and text.
 
@@ -15,28 +15,6 @@ This chapter will show you how to create your own data types, allowing you to mo
 
 When you have understood the material in this chapter you will be able to define your own data types to model the entities you want to work with in your program.
 
-## Overview of structuring data concepts
-
-To this point, data has been about single values that are either numbers, text, or Boolean values. These values can be used in [expressions](/book/part-1-instructions/1-sequence/5-reference/13-expression) and stored in [variables](/book/part-1-instructions/2-data/5-reference/10-variable). Now as we move to creating larger and more complicated programs, you need a more effective means of modelling the data in your code. This chapter introduces concepts that you can use to more accurately model the data and entities associated with your program.
-
-This chapter introduces the following **building blocks**:
-
-- [Enumeration](/book/part-2-organised-code/2-structuring-data/5-reference/03-02-enum): used to store one of a list of available options.
-- [Struct](/book/part-2-organised-code/2-structuring-data/5-reference/03-01-struct): used to store multiple fields in a single composite value.
-
-You may need to revise the following programming building blocks:
-
-- [Variable](/book/part-1-instructions/2-data/5-reference/10-variable).: The idea of storing data within your code.
-- [Local Variable](/book/part-2-organised-code/1-structuring-code/5-reference/03-local-variable): Storing data in a or [Function](/book/part-2-organised-code/1-structuring-code/5-reference/04-function-decl) or [Procedure](/book/part-2-organised-code/1-structuring-code/5-reference/02-procedures).
-- [Parameter](/book/part-2-organised-code/1-structuring-code/5-reference/04-function-decl#examples): Passing data to a [Function or Procedure](/book/part-2-organised-code/1-structuring-code/5-reference/00-0-functions-and-procedures).
-
-The following programming terminology will also be used in this chapter:
-
-- [Expression](/book/part-1-instructions/1-sequence/5-reference/13-expression): A value used in a statement.
-- [Type](/book/part-1-instructions/1-sequence/5-reference/15-type): A kind of data used in your code.
-
 :::tip
-
 Modelling will be a key process in this chapter. You need to be able to picture the digital reality you are creating, and see *entities* (things) within it. You can then start to create these entities in your code.
-
 :::
