Fix broken link

--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/0-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/0-overview.mdx
@@ -7,7 +7,7 @@ import { YouTube } from 'astro-embed';
   <YouTube id="GuAvEYd3_xY" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-In [Structuring Code](/book/part-2-organised-code/1-structuring-code/0-overview.mdx), we saw how to organise our code into functions and procedures. This has allowed us to start building larger programs. However, we haven't yet seen the tools we can use to organise data.
+In [Structuring Code](/book/part-2-organised-code/1-structuring-code/0-overview), we saw how to organise our code into functions and procedures. This has allowed us to start building larger programs. However, we haven't yet seen the tools we can use to organise data.
 
 Data is a key enabler in helping us build and communicate the things within our digital realities. By organising our data, we can start to capture the things that exist within our code far more clearly than we have with just primitive data line numbers and text.
 
