--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install-os/2-4-setup-win-msys.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install-os/2-4-setup-win-msys.mdx
@@ -32,21 +32,25 @@ Now, let's get started!
 
 </Steps>
 
-## 2. Open a MINGW64 Terminal
+## 2. Open a MINGW64 (or CLANGARM64) Terminal
 
 <Steps>
 
 3. MSYS2 comes with a number of terminal environments.
-   We want to use a specific one. To do this, open the Windows start menu, and search for "MINGW64".
+   We want to use a specific one. To do this, open the Windows start menu, and search for "MINGW64" (or "CLANGARM64" if using a Windows ARM computer).
 
     ![Image showing opening MSYS2 MINGW64 Terminal](./images/setup-windows/open-mingw64-terminal.png)
     <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
     :::note[Look for the blue icon]
-    Not sure if you have the right one? The MINGW64 Terminal has a blue icon.
+    Not sure if you have the right one?
+
+    - The MINGW64 Terminal has a blue icon.
+    - The CLANGARM64 Terminal has a green icon.
+
     :::
 
-4. Open the **MSYS2 MINGW64** Terminal using **"Run as Administrator"**
+4. Open the **MSYS2 MINGW64** (or **MSYS2 CLANGARM64**) Terminal using **"Run as Administrator"**.
 
 </Steps>
 
