--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-01-stats-design.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-01-stats-design.mdx
@@ -38,4 +38,4 @@ We can represent this in a structure chart to start to visualise how this comes 
 ![Structure Chart showing the structure of the Statistics Calculator program](./images/structurechart-statistics-calculator.png)
 <div class="caption">Structure Chart showing the structure of the statistics calculator program</div><br/>
 
-Our `dynamic_array` struct would work in this context, as it can be passed around to the different functions and procedures. To avoid copies, we can pass it around our program using [pass by reference](http://192.168.1.101:3001/book/part-2-organised-code/1-structuring-code/5-reference/03c-pass-by-ref/).
+Our `dynamic_array` struct would work in this context, as it can be passed around to the different functions and procedures. To avoid copies, we can pass it around our program using [pass by reference](/book/part-2-organised-code/1-structuring-code/5-reference/03c-pass-by-ref/).
