Update handling multiples fly catch with dynamic_array

--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/05-02-design.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/05-02-design.mdx
@@ -78,7 +78,7 @@ If we want maps of different sizes we could add extra fields to the map so that 
 
 ## Functional Structure Design
 
-This will be an event drive program, so we can use the [event loop](/book/part-1-instructions/3-control-flow/5-reference/04-1-while-loop) we first saw in the control flow chapter. We can code this in `main`, and for now we can just have it draw the map. The pseudocode for this is shown below. We need main to set up the map, and then loop drawing the map to the screen.
+This will be an event driven program, so we can use the [event loop](/book/part-1-instructions/3-control-flow/5-reference/04-1-while-loop) we first saw in the control flow chapter. We can code this in `main`, and for now we can just have it draw the map. The pseudocode for this is shown below. We need main to set up the map, and then loop drawing the map to the screen.
 
 ```
 Function: Main
